--- a/public/index.html
+++ b/public/index.html
@@ -3,83 +3,69 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Connect Four</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://code.jquery.com/jquery-3.4.1.js"
-        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <title>Connect Four Game </title>
 </head>
 
+<!-- 7*6 Borad -->
+
 <body>
-    <header class="center">
-        <h1>Connect Four</h1>
-    </header>
-    <div id="app" class="center">
-        <table class="board">
-            <tr>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-            </tr>
+    <h3>The Current Player: Player <span id='Current-player'>1</span></h3>
+    <h3 id='result'></h3>
+    <div class='board'>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
 
-            <tr>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-            </tr>
+        <div class='taken'></div>
+        <div class='taken'></div>
+        <div class='taken'></div>
+        <div class='taken'></div>
+        <div class='taken'></div>
+        <div class='taken'></div>
+        <div class='taken'></div>
 
-            <tr>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-            </tr>
-
-            <tr>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-            </tr>
-
-            <tr>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-            </tr>
-
-            <tr>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-                <td><button type="button"></button></td>
-            </tr>
-        </table>
     </div>
-
-
-    <script type="text/javascript" src="app.js"></script>
+    <script scr="app.js"></script>
 </body>
 
 </html>
