reset button added

--- a/public/game.html
+++ b/public/game.html
@@ -75,6 +75,11 @@
                 <td><button type="button"></button></td>
             </tr>
         </table>
+        <br>
+        <br>
+    </div>
+    <div align='center'>
+        <button class="words" onclick="replay()">Play Again</button>
     </div>
     <script src="game.js"></script>
 </body>
